--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Weather</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkm1Gu3jvTBeHTPTGlS-XJwHdhLo7CB7M&libraries=places"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
